add new menu entries

--- a/docs/develop/java/index-java.mdx
+++ b/docs/develop/java/index-java.mdx
@@ -8,7 +8,7 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-Find Tutorials, Examples and Technical articles that will help you to develop with Redis and Java.
+Find tutorials, examples and technical articles that will help you to develop with Redis and Java.
 
 
 ## Getting Started
