--- a/docs/develop/node/index-node.mdx
+++ b/docs/develop/node/index-node.mdx
@@ -9,4 +9,4 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-Develop with Node.js and Redis
+Develop with Node.js and Redis - test 2
