add node documentation

--- a/docs/develop/node/index-node.mdx
+++ b/docs/develop/node/index-node.mdx
@@ -9,4 +9,8 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-Develop with Node.js and Redis - test 5 from master
+Find Tutorials, Examples and Technical articles that will help you to develop with Redis and Node.js/JavaScript.
+
+## Getting Started
+
+The Node.js community has built many client libraries that you can find here. For your first steps with Node.js and Redis, this article will show how to use the recommended libraries: ioredis and node-redis
