Add tools and guides section and samples

--- a/docs/tools/index.mdx
+++ b/docs/tools/index.mdx
@@ -4,3 +4,26 @@ title: Tools
 sidebar_label: Tools
 slug: /tools/index
 ---
+import RedisCard from '@site/src/components/RedisCard';
+
+
+<div class="row">
+
+ <div class="col">
+    <RedisCard 
+        title="RedisInsight" 
+        description="RedisInsight provides an intuitive and efficient GUI for Redis" 
+        page="https://redislabs.com/redis-enterprise/redis-insight/"
+        />
+ </div>
+ 
+ <div class="col">
+    <RedisCard 
+        title="RIOT - Get data in and out of Redis" 
+        description="Redis Input/Output Tools (RIOT) is a set of import/export command line utilities for Redis" 
+        page="https://github.com/redis-developer/riot"
+        />
+ </div>
+
+
+</div>
