issue #1 addng new examples

--- a/docs/guides/import-data.mdx
+++ b/docs/guides/import-data.mdx
@@ -4,3 +4,9 @@ title: Import Data into Redis
 sidebar_label: Import Data
 slug: /guides/import-data
 ---
+
+## Import data to the Cloud
+
+
+## Import using Riot
+
