--- a/docs/develop/node/index-node.mdx
+++ b/docs/develop/node/index-node.mdx
@@ -9,7 +9,7 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-Find Tutorials, Examples and Technical articles that will help you to develop with Redis and Node.js/JavaScript.
+Find tutorials, examples and technical articles that will help you to develop with Redis and Node.js/JavaScript.
 
 ### Getting Started
 
