new migration article

--- a/docs/guides/index.mdx
+++ b/docs/guides/index.mdx
@@ -40,7 +40,11 @@ import RedisCard from '@site/src/components/RedisCard';
  </div>
  
  <div class="col">
-
+    <RedisCard 
+        title="IoT and Time Series" 
+        description="Implementing IOT sensor with Redis Time Series and Rasperry Pi" 
+        page="redis-security"
+        />
  </div>
 
 </div>
