node page update

--- a/docs/develop/java/index-java.mdx
+++ b/docs/develop/java/index-java.mdx
@@ -138,12 +138,15 @@ Find more information about Java & Redis connections in the "[Redis Connect](htt
   </TabItem>
 </Tabs>
 
+---
+
+## Guides
+
 ----
 
 ## Ecosystem
 
 As developer you can use the Java client library directly in your application, or you can frameworks like: [Spring](https://spring.io/), [Vert.x](https://vertx.io/), and [Micronaut](https://micronaut.io/).
-
 
 
 <div class="row text--center">
@@ -180,6 +183,7 @@ As developer you can use the Java client library directly in your application, o
 </div>
 
 ---
+
 
 ## More developer resources
 
