--- a/docs/develop/node/index-node.mdx
+++ b/docs/develop/node/index-node.mdx
@@ -107,3 +107,49 @@ Find more information about Redis & node-redis connections in the "[Redis Connec
 
   </TabItem>
 </Tabs>
+
+---
+
+## More developer resources
+
+<div class="row">
+
+<div class="col">
+
+#### Sample Code
+
+**[Basic Redis Caching](https://github.com/redis-developer/basic-caching-demo-nodejs)**
+This application call the GitHub API and cache the results into Redis.
+
+**[Redis Rate-Limiting](https://github.com/redis-developer/basic-redis-rate-limiting-demo-nodejs)**
+This is a very simple app that demonstrates rate-limiting feature using Redis.
+
+**[Notifications with WebSocket, Vue & Redis](https://github.com/redis-developer/redis-websockets-vue-notifications)**
+This project allow you to push notifications in a Vue application from a Redis `PUBLISH` using WebSockets.
+
+
+
+</div>
+
+<div class="col">
+
+#### Technical Articles & Videos
+
+**[Redis Rapid Tips: ioredis](https://www.youtube.com/watch?v=H6rikGCYPUk)** (YouTube)
+
+**[Mapping Objects between Node and Redis](https://www.youtube.com/watch?v=dukkMLbzPfA)** (YouTube)
+
+</div>
+</div>
+
+---
+
+## Redis University
+
+### [Redis for JavaScript Developers](https://university.redislabs.com/courses/ru102js/)
+
+Build full-fledged Redis applications with Node.js and Express.
+
+<div class="text--center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Ik1WXPX3WNU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
