--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -59,6 +59,33 @@ Find more information about Redis & Redis connections in the "[Redis Connect](ht
 </Tabs>
   
 
+---
+
+## More developer resources
+
+<div class="row">
+
+<div class="col">
+
+#### Sample Code
+
+**[Flask Simple Rate limiting Example   ](https://github.com/redis-developer/basic-caching-demo-nodejs)**
+Application that shows how to do rate limiting using various Redis datastructure.
+
+
+
+</div>
+
+<div class="col">
+
+#### Technical Articles & Videos
+
+**[Beyond the Cache with Python](https://redislabs.com/blog/beyond-the-cache-with-python/)**
+
+
+</div>
+</div>
+
   ---
 
 ## Redis University
