--- a/docs/guides/index.mdx
+++ b/docs/guides/index.mdx
@@ -48,3 +48,19 @@ import RedisCard from '@site/src/components/RedisCard';
  </div>
 
 </div>
+
+<div class="row">
+
+ <div class="col">
+    <RedisCard 
+        title="Contributing to Redis" 
+        description="Blah blab" 
+        page="import-data"
+        />
+ </div>
+ 
+ <div class="col">
+
+ </div>
+
+</div>
