--- a/docs/tools/index.mdx
+++ b/docs/tools/index.mdx
@@ -25,5 +25,45 @@ import RedisCard from '@site/src/components/RedisCard';
         />
  </div>
 
+</div>
+
+
+<div class="row">
+
+ <div class="col">
+    <RedisCard 
+        title="Redis Data Source for Grafana" 
+        description="The Redis Data Source for Grafana allows users to connect to the Redis and build Grafana dashboards." 
+        page="https://github.com/RedisGrafana/grafana-redis-datasource"
+        />
+ </div>
+ 
+ <div class="col">
+    <RedisCard 
+        title="Memtier Benchmark" 
+        description="memtier_benchmark is a command line load generation and bechmarking tool developed by Redis Labs." 
+        page="https://github.com/RedisLabs/memtier_benchmark"
+        />
+ </div>
+
+</div>
+
+<div class="row">
+
+ <div class="col">
+    <RedisCard 
+        title="RediSearch plugin for Wordpress" 
+        description="Use RediSearch to power your Wordpress Search capabilities." 
+        page="https://wordpress.org/plugins/redisearch/"
+        />
+ </div>
+ 
+ <div class="col">
+     <RedisCard 
+        title="Redis Sitesearch" 
+        description="redis-sitesearch is a package that indexes web sites into RediSearch." 
+        page="https://github.com/redislabs-training/redis-sitesearch"
+        />
+</div>
 
 </div>
