--- a/docs/tools/index.mdx
+++ b/docs/tools/index.mdx
@@ -7,6 +7,10 @@ slug: /tools/index
 import RedisCard from '@site/src/components/RedisCard';
 
 
+### GUI tools for Redis
+
+Find the best Graphical User Interfaces to interact with your data and, manage and monitor your Redis Database.
+
 <div class="row">
 
  <div class="col">
@@ -19,9 +23,9 @@ import RedisCard from '@site/src/components/RedisCard';
  
  <div class="col">
     <RedisCard 
-        title="RIOT - Get data in and out of Redis" 
-        description="Redis Input/Output Tools (RIOT) is a set of import/export command line utilities for Redis" 
-        page="https://github.com/redis-developer/riot"
+        title="Redis Data Source for Grafana" 
+        description="The Redis Data Source for Grafana allows users to connect to the Redis and build Grafana dashboards." 
+        page="https://github.com/RedisGrafana/grafana-redis-datasource"
         />
  </div>
 
@@ -32,9 +36,32 @@ import RedisCard from '@site/src/components/RedisCard';
 
  <div class="col">
     <RedisCard 
-        title="Redis Data Source for Grafana" 
-        description="The Redis Data Source for Grafana allows users to connect to the Redis and build Grafana dashboards." 
-        page="https://github.com/RedisGrafana/grafana-redis-datasource"
+        title="RDM" 
+        description="Cross-platform open source database management" 
+        page="https://www.rdm.dev/"
+        />
+ </div>
+
+
+ <div class="col">
+    <RedisCard 
+        title="Redsmin" 
+        description="Redsmin offers a real-time, atomic, performant administration and monitoring interface for Redis." 
+        page="https://www.redsmin.com/"
+        />
+ </div>
+
+</div>
+
+### Others
+
+<div class="row">
+
+ <div class="col">
+    <RedisCard 
+        title="RIOT - Get data in and out of Redis" 
+        description="Redis Input/Output Tools (RIOT) is a set of import/export command line utilities for Redis" 
+        page="https://github.com/redis-developer/riot"
         />
  </div>
  
