change home, add main pages, explore

--- a/docs/develop/java/index-java.mdx
+++ b/docs/develop/java/index-java.mdx
@@ -7,6 +7,7 @@ slug: /develop/java/
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
+import RedisCard from '@site/src/components/RedisCard';
 
 Find tutorials, examples and technical articles that will help you to develop with Redis and Java.
 
@@ -84,9 +85,29 @@ The blog post “[Jedis vs. Lettuce: An Exploration](https://redislabs.com/blog/
         jedisPool.close();
     ```
 
-
-
 Find more information about Java & Redis connections in the "[Redis Connect](https://github.com/redis-developer/redis-connect/tree/master/java/jedis)".
+
+#### Jedis & Redis Modules
+
+<div class="row">
+
+ <div class="col">
+    <RedisCard 
+        title="JRediSearch" 
+        description="Indexing and querying data with full text search capabilities" 
+        page="import-data"
+        />
+ </div>
+ 
+ <div class="col">
+    <RedisCard 
+        title="Indexing and Querying" 
+        description="Learn how to query data by values" 
+        page="indexing-querying"
+        />
+ </div>
+
+</div>
 
 
   </TabItem>
