add new info on search

--- a/docs/develop/java/index-java.mdx
+++ b/docs/develop/java/index-java.mdx
@@ -94,7 +94,7 @@ Find more information about Java & Redis connections in the "[Redis Connect](htt
  <div class="col">
     <RedisCard 
         title="JRediSearch" 
-        description="Indexing and querying data with full text search capabilities" 
+        description="Indexing and querying data with full text search capabilities with Redis" 
         page="import-data"
         />
  </div>
