--- a/docs/create/index-create.mdx
+++ b/docs/create/index-create.mdx
@@ -7,7 +7,7 @@ slug: /create/
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-This page explain the step by step Redis database creation process for all the different options listed below:
+This page explains the step by step Redis database creation process for all the different options listed below:
 
 
 
