--- a/docs/create/index-create.mdx
+++ b/docs/create/index-create.mdx
@@ -7,7 +7,26 @@ slug: /create/
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-
+<div className="row">
+    <div className=" col col--2 text--center">
+        <a  href={useBaseUrl('docs/create/cloud')}>
+        <img src={useBaseUrl('/img/logos/cloud.png')} />
+        <h4>Using Cloud</h4>
+        </a>     
+    </div>       
+    <div className=" col col--2 text--center">
+        <a  href={useBaseUrl('docs/create/docker')}>
+        <img src={useBaseUrl('/img/logos/docker.png')} />
+        <h4>Using Docker</h4>
+        </a>     
+    </div> 
+    <div className=" col col--2 text--center">
+        <a  href={useBaseUrl('docs/create/resoftware')}>
+        <img src={useBaseUrl('/img/logos/resoftware.png')} />
+        <h4>Using Redis Enterprise Software</h4>
+        </a>     
+    </div>             
+</div>
 
 
 
