--- a/docs/guides/import/database-migration-aws-elasticache-redis-enterprise-cloud.mdx
+++ b/docs/guides/import/database-migration-aws-elasticache-redis-enterprise-cloud.mdx
@@ -1,8 +1,8 @@
 ---
-id: import-data
+id: database-migration-aws-elasticache-redis-enterprise-cloud
 title: Online Database Migration from Amazon ElastiCache to Redis Enterprise Cloud using RIOT
 sidebar_label: Import Data
-slug: /guides/import-data/database-migration-aws-elasticache-redis-enterprise-cloud
+slug: /guides/import/database-migration-aws-elasticache-redis-enterprise-cloud
 ---
 
 Authors: Ajeet Singh Raina, Julien Ruaux
