--- a/docs/guides/index.mdx
+++ b/docs/guides/index.mdx
@@ -15,7 +15,7 @@ import RedisCard from '@site/src/components/RedisCard';
     <RedisCard 
         title="Import Data into Redis" 
         description="Discover the various options to import data into Redis" 
-        page="import-data"
+        page="/docs/guides/import/"
         />
  </div>
  
@@ -23,7 +23,7 @@ import RedisCard from '@site/src/components/RedisCard';
     <RedisCard 
         title="Indexing and Querying" 
         description="Learn how to query data by values" 
-        page="indexing-querying"
+        page="/docs/guides/indexing/"
         />
  </div>
 
@@ -35,16 +35,16 @@ import RedisCard from '@site/src/components/RedisCard';
     <RedisCard 
         title="Security" 
         description="Introduction and best practises of Redis Security" 
-        page="redis-security"
+        page="/docs/guides/security/"
         />
  </div>
  
  <div class="col">
     <RedisCard 
-        title="IoT and Time Series" 
-        description="Implementing IOT sensor with Redis Time Series and Rasperry Pi" 
-        page="redis-security"
-        />
+        title="Data Modeling" 
+        description="Data modelinging for Redis" 
+        page="/docs/guides/data-modeling/"
+        />     
  </div>
 
 </div>
