--- a/docs/guides/indexing/indexing-querying.mdx
+++ b/docs/guides/indexing/indexing-querying.mdx
@@ -2,7 +2,7 @@
 id: indexing-querying
 title: Indexing and Querying
 sidebar_label: Indexin
-slug: /guides/indexing-querying
+slug: /guides/indexing/
 
 ---
 
