--- a/docs/create/resoftware/index-cloud.mdx
+++ b/docs/create/resoftware/index-cloud.mdx
@@ -6,7 +6,7 @@ slug: /create/resoftware
 ---
 
 
-### Create a database using Redis Enterprise Software
+# Create a database using Redis Enterprise Software
 
 
 ## Install Redis Enterprise Software 
