add create page

--- a/docs/create/cloud/index-cloud.mdx
+++ b/docs/create/cloud/index-cloud.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-cloud
-title: Using Cloud
-sidebar_label: cloud
+title: Using Redis Enterprise Cloud
+sidebar_label: Redis Cloud
 slug: /create/cloud
 ---
 
