--- a/docs/create/resoftware/index-resoftware.mdx
+++ b/docs/create/resoftware/index-resoftware.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-software
 title: Using Redis Enterprise Software
-sidebar_label: resoftware
+sidebar_label: Redis Enterprise
 slug: /create/resoftware
 ---
 
