--- a/docs/create/index-create.mdx
+++ b/docs/create/index-create.mdx
@@ -7,26 +7,80 @@ slug: /create/
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-<div className="row">
-    <div className=" col col--2 text--center">
+The following links provides your the different options to create a new Redis database either on the Cloud or using local software. (Docker, Redis Enterprise, from Soruces)
+
+
+<div className="row text--center">
+<div className=" col text--center " >
+<div className="ri-container text--center">
+<div className="ri-description-short text--center ">
+    <div className="ri-icon"><span className="fe fe-zap" /></div>
+    <div className="ri-detail text--center ">
+        <div className="ri-title text--center "><a  href={useBaseUrl('docs/create/cloud')}>Redis Enterprise Cloud</a></div>
+        <div className="ri-description text--center">
         <a  href={useBaseUrl('docs/create/cloud')}>
-        <img src={useBaseUrl('/img/logos/cloud.png')} />
-        <h4>Using Cloud</h4>
-        </a>     
-    </div>       
-    <div className=" col col--2 text--center">
-        <a  href={useBaseUrl('docs/create/docker')}>
-        <img src={useBaseUrl('/img/logos/docker.png')} />
-        <h4>Using Docker</h4>
-        </a>     
-    </div> 
-    <div className=" col col--2 text--center">
-        <a  href={useBaseUrl('docs/create/resoftware')}>
-        <img src={useBaseUrl('/img/logos/resoftware.png')} />
-        <h4>Using Redis Enterprise Software</h4>
-        </a>     
-    </div>             
+            <img src={useBaseUrl('/img/logos/cloud.png')} width="100"/>
+        </a>
+        </div>
+    </div>
 </div>
+</div>
+</div>
+
+<div className=" col text--center" >
+<div className="ri-container">
+<div className="ri-description-short ">
+    <div className="ri-icon"><span className="fe fe-zap" /></div>
+    <div className="ri-detail ">
+        <div className="ri-title"><a  href={useBaseUrl('docs/create/cloud')}>Docker</a></div>
+        <div className="ri-description text--center">
+        <a  href={useBaseUrl('docs/create/cloud')}>
+            <img src={useBaseUrl('/img/logos/docker.png')} width="100"/>
+        </a>
+        </div>
+    </div>
+</div>
+</div>
+</div>
+</div>
+
+<div className="row text--center">
+
+<div className=" col " >
+<div className="ri-container">
+<div className="ri-description-short ">
+    <div className="ri-icon"><span className="fe fe-zap" /></div>
+    <div className="ri-detail">
+        <div className="ri-title"><a  href={useBaseUrl('docs/create/resoftware')}>Redis Enterprise Software</a></div>
+        <div className="ri-description text--center ">
+        <a  href={useBaseUrl('docs/create/resoftware')}>
+        <img src={useBaseUrl('/img/logos/resoftware.png')} width="85" />
+        </a>
+        </div>
+    </div>
+</div>
+</div>
+</div>
+
+<div className=" col " >
+<div className="ri-container">
+<div className="ri-description-short ">
+    <div className="ri-icon"><span className="fe fe-zap" /></div>
+    <div className="ri-detail">
+        <div className="ri-title"><a  href="https://docs.redislabs.com/latest/platforms/">Redis Enterprise & Kubernetes</a></div>
+        <div className="ri-description text--center ">
+        <a  href="https://docs.redislabs.com/latest/platforms/">
+        <img src={useBaseUrl('/img/logos/kubernetes.png')} width="150" />
+        </a>
+        </div>
+    </div>
+</div>
+</div>
+</div>
+
+</div>
+
+
 
 
 
