--- a/docs/develop/java/index-java.mdx
+++ b/docs/develop/java/index-java.mdx
@@ -167,22 +167,39 @@ Find more information about Java & Redis connections in the "[Redis Connect](htt
 
 ## Ecosystem
 
-As developer you can use the Java client library directly in your application, or you can frameworks like: [Spring](https://spring.io/), [Vert.x](https://vertx.io/), and [Micronaut](https://micronaut.io/).
+As developer you can use the Java client library directly in your application, or you can frameworks like: [Spring](https://spring.io/), [Quarkus](https://quarkus.io/),  [Vert.x](https://vertx.io/), and [Micronaut](https://micronaut.io/).
 
 
 <div class="row text--center">
 
 <div class="col ">
+<div className="ri-container">
 
 #### Develop with Spring 
 
 ![Spring logo](/img/logos/spring.png)
 
 [Spring Data Redis](https://spring.io/projects/spring-data-redis), part of the larger Spring Data project. It provides easy access to Redis from Spring applications.
- 
+</div>
 </div>
 
 <div class="col">
+<div className="ri-container">
+
+#### Develop with Quarkus 
+
+![Quarkus logo](/img/logos/quarkus.png)
+
+[Redis Client extension](https://quarkus.io/guides/redis) allows you to connect your Quarkus application to a Redis instance.
+</div>
+</div>
+</div>
+
+
+<div class="row text--center">
+
+<div class="col">
+<div className="ri-container">
 
 #### Develop with Vert.x 
 
@@ -190,8 +207,10 @@ As developer you can use the Java client library directly in your application, o
 
 [Eclipse Vert.x](https://vertx.io/introduction-to-vertx-and-reactive/) is a framework to build reactive applications on the JVM. [Vert.x-redis](https://vertx.io/docs/vertx-redis-client/java/) is redis client to be used with Vert.x. 
 </div>
+</div>
 
 <div class="col">
+<div className="ri-container">
 
 #### Develop with Micronaut 
 
@@ -199,6 +218,7 @@ As developer you can use the Java client library directly in your application, o
 
 [Micronaut](https://micronaut.io/) is a framework for building microservices and serverless applications. The [Micronaut Redis](https://micronaut-projects.github.io/micronaut-redis/snapshot/guide/) extension provides the integration with Redis.
 
+</div>
 </div>
 
 </div>
