replace /docs by / for content - ussye #12

--- a/docs/guides/index.mdx
+++ b/docs/guides/index.mdx
@@ -15,7 +15,7 @@ import RedisCard from '@site/src/components/RedisCard';
     <RedisCard 
         title="Import Data into Redis" 
         description="Discover the various options to import data into Redis" 
-        page="/docs/guides/import/"
+        page="/guides/import/"
         />
  </div>
  
@@ -23,7 +23,7 @@ import RedisCard from '@site/src/components/RedisCard';
     <RedisCard 
         title="Indexing and Querying" 
         description="Learn how to query data by values" 
-        page="/docs/guides/indexing/"
+        page="/guides/indexing/"
         />
  </div>
 
@@ -35,7 +35,7 @@ import RedisCard from '@site/src/components/RedisCard';
     <RedisCard 
         title="Security" 
         description="Introduction and best practises of Redis Security" 
-        page="/docs/guides/security/"
+        page="/guides/security/"
         />
  </div>
  
@@ -43,7 +43,7 @@ import RedisCard from '@site/src/components/RedisCard';
     <RedisCard 
         title="Data Modeling" 
         description="Data modelinging for Redis" 
-        page="/docs/guides/data-modeling/"
+        page="/guides/data-modeling/"
         />     
  </div>
 
