replace /docs by / for content - issue #12

--- a/docs/create/index-create.mdx
+++ b/docs/create/index-create.mdx
@@ -15,9 +15,9 @@ The following links provides your the different options to create a new Redis da
 <div className="ri-description-short text--center ">
     <div className="ri-icon"><span className="fe fe-zap" /></div>
     <div className="ri-detail text--center ">
-        <div className="ri-title text--center "><a  href={useBaseUrl('docs/create/cloud')}>Redis Enterprise Cloud</a></div>
+        <div className="ri-title text--center "><a  href={useBaseUrl('/create/cloud')}>Redis Enterprise Cloud</a></div>
         <div className="ri-description text--center">
-        <a  href={useBaseUrl('docs/create/cloud')}>
+        <a  href={useBaseUrl('/create/cloud')}>
             <img src={useBaseUrl('/img/logos/cloud.png')} width="100"/>
         </a>
         </div>
@@ -31,9 +31,9 @@ The following links provides your the different options to create a new Redis da
 <div className="ri-description-short ">
     <div className="ri-icon"><span className="fe fe-zap" /></div>
     <div className="ri-detail ">
-        <div className="ri-title"><a  href={useBaseUrl('docs/create/cloud')}>Docker</a></div>
+        <div className="ri-title"><a  href={useBaseUrl('/create/cloud')}>Docker</a></div>
         <div className="ri-description text--center">
-        <a  href={useBaseUrl('docs/create/cloud')}>
+        <a  href={useBaseUrl('/create/cloud')}>
             <img src={useBaseUrl('/img/logos/docker.png')} width="100"/>
         </a>
         </div>
@@ -50,9 +50,9 @@ The following links provides your the different options to create a new Redis da
 <div className="ri-description-short ">
     <div className="ri-icon"><span className="fe fe-zap" /></div>
     <div className="ri-detail">
-        <div className="ri-title"><a  href={useBaseUrl('docs/create/resoftware')}>Redis Enterprise Software</a></div>
+        <div className="ri-title"><a  href={useBaseUrl('/create/resoftware')}>Redis Enterprise Software</a></div>
         <div className="ri-description text--center ">
-        <a  href={useBaseUrl('docs/create/resoftware')}>
+        <a  href={useBaseUrl('/create/resoftware')}>
         <img src={useBaseUrl('/img/logos/resoftware.png')} width="85" />
         </a>
         </div>
