--- a/docs/develop/index-develop.mdx
+++ b/docs/develop/index-develop.mdx
@@ -14,25 +14,25 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 <div className="row">
     <div className=" col col--2 text--center">
-        <a  href={useBaseUrl('docs/develop/java')}>
+        <a  href={useBaseUrl('/develop/java')}>
         <img src={useBaseUrl('/img/logos/java.png')} />
         <h4>Java</h4>
         </a>     
     </div>       
     <div className=" col col--2 text--center">
-        <a  href={useBaseUrl('docs/develop/python')}>
+        <a  href={useBaseUrl('/develop/python')}>
         <img src={useBaseUrl('/img/logos/python.png')} />
         <h4>Python</h4>
         </a>     
     </div> 
     <div className=" col col--2 text--center">
-        <a  href={useBaseUrl('docs/develop/node')}>
+        <a  href={useBaseUrl('/develop/node')}>
         <img src={useBaseUrl('/img/logos/nodejs.png')} />
         <h4>Node.js</h4>
         </a>     
     </div>          
     <div className=" col col--2 text--center">
-        <a  href={useBaseUrl('docs/develop/golang')}>
+        <a  href={useBaseUrl('/develop/golang')}>
         <img src={useBaseUrl('/img/logos/golang.png')} />
         <h4>Go</h4>
         </a>     
