--- a/docs/guides/index.mdx
+++ b/docs/guides/index.mdx
@@ -2,7 +2,7 @@
 id: index-guides
 title: Guides
 sidebar_label: Guides
-slug: /guides/index
+slug: guides/index
 ---
 
 import RedisCard from '@site/src/components/RedisCard';
@@ -15,7 +15,7 @@ import RedisCard from '@site/src/components/RedisCard';
     <RedisCard 
         title="Import Data into Redis" 
         description="Discover the various options to import data into Redis" 
-        page="/guides/import/"
+        page="guides/import/"
         />
  </div>
  
@@ -23,7 +23,7 @@ import RedisCard from '@site/src/components/RedisCard';
     <RedisCard 
         title="Indexing and Querying" 
         description="Learn how to query data by values" 
-        page="/guides/indexing/"
+        page="guides/indexing/"
         />
  </div>
 
