--- a/docs/create/index-create.mdx
+++ b/docs/create/index-create.mdx
@@ -33,7 +33,7 @@ The following links provides your the different options to create a new Redis da
     <div className="ri-detail ">
         <div className="ri-title"><a  href={useBaseUrl('/create/cloud')}>Docker</a></div>
         <div className="ri-description text--center">
-        <a  href={useBaseUrl('/create/cloud')}>
+        <a  href={useBaseUrl('/create/docker')}>
             <img src={useBaseUrl('/img/logos/docker.png')} width="100"/>
         </a>
         </div>
