Add TLS guide for enterprise

--- a/docs/develop/java/index-java.mdx
+++ b/docs/develop/java/index-java.mdx
@@ -163,7 +163,12 @@ Find more information about Java & Redis connections in the "[Redis Connect](htt
 
 ## Guides
 
-----
+<RedisCard 
+    title="How to Use SSL/TLS With Redis Enterprise" 
+    page="/guide/security/how-to-use-ssl-tls-with-redis-enterprise"
+    />
+
+---
 
 ## Ecosystem
 
