--- a/docs/develop/node/index-node.mdx
+++ b/docs/develop/node/index-node.mdx
@@ -8,6 +8,7 @@ slug: /develop/node/
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
+import RedisCard from '@site/src/components/RedisCard';
 
 Find tutorials, examples and technical articles that will help you to develop with Redis and Node.js/JavaScript.
 
@@ -107,6 +108,15 @@ Find more information about Redis & node-redis connections in the "[Redis Connec
 
   </TabItem>
 </Tabs>
+
+---
+
+## Guides
+
+<RedisCard 
+    title="How to Use SSL/TLS With Redis Enterprise" 
+    page="/guide/security/how-to-use-ssl-tls-with-redis-enterprise"
+    />
 
 ---
 
