--- a/docs/develop/golang/index-golang.mdx
+++ b/docs/develop/golang/index-golang.mdx
@@ -8,6 +8,7 @@ slug: /develop/golang/
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
+import RedisCard from '@site/src/components/RedisCard';
 
 Find tutorials, examples and technical articles that will help you to develop with Redis and Golang.
 
