--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -8,6 +8,7 @@ slug: /develop/python/
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
+import RedisCard from '@site/src/components/RedisCard';
 
 Find Tutorials, Examples and Technical articles that will help you to develop with Redis and Python.
 
@@ -58,6 +59,14 @@ Find more information about Redis & Redis connections in the "[Redis Connect](ht
   </TabItem>
 </Tabs>
   
+---
+
+## Guides
+
+<RedisCard 
+    title="How to Use SSL/TLS With Redis Enterprise" 
+    page="/guide/security/how-to-use-ssl-tls-with-redis-enterprise"
+    />
 
 ---
 
