Add link to RedisInsight doc

--- a/docs/explore/index-explore.mdx
+++ b/docs/explore/index-explore.mdx
@@ -28,3 +28,8 @@ RedisInsight provides an intuitive and efficient GUI for Redis, allowing you to 
 
 * [Automatically Discovering Databases](https://docs.redislabs.com/latest/ri/using-redisinsight/auto-discover-databases/)
 
+
+
+### More
+
+* [Official RedisInsight Documentation](https://docs.redislabs.com/latest/ri/)
