add link to redisearch tutorial

--- a/docs/tutorials/redisearch/getting-started/index-redisearch-getting-started.mdx
+++ b/docs/tutorials/redisearch/getting-started/index-redisearch-getting-started.mdx
@@ -4,10 +4,12 @@ title: RediSearch Getting Started
 slug: /tutorials/redisearch/getting-started/
 description: A tutorial that guide developer to learn about indexing and querying Redis database using RediSearch
 keywords:
-    - tuto
+    - tutorial
     - redis
     - redisearch
     - index
 ---
 
-An example of a tutorial
+
+    * [RediSearch Getting Started & Sample Application](https://github.com/RediSearch/redisearch-getting-started/blob/master/docs/001-introduction.md)
+
