add tool :monitor command, mostly to test that CNAME works after update

--- a/docs/tools/index.mdx
+++ b/docs/tools/index.mdx
@@ -93,4 +93,17 @@ Find the best Graphical User Interfaces to interact with your data and, manage a
         />
 </div>
 
+<div class="row">
+
+ <div class="col">
+    <RedisCard 
+        title="Redis MONITOR command" 
+        description="Useful command to capture command processed by Redis Server" 
+        page="https://redis.io/commands/monitor"
+        />
+ </div>
+ 
+ <div class="col">
+</div>
+
 </div>
