add tool :monitor command, mostly to test that CNAME works after update

--- a/docs/tools/index.mdx
+++ b/docs/tools/index.mdx
@@ -95,6 +95,12 @@ Find the best Graphical User Interfaces to interact with your data and, manage a
 
 <div class="row">
 
+</div>
+
+</div>
+
+<div class="row">
+
  <div class="col">
     <RedisCard 
         title="Redis MONITOR command" 
@@ -104,6 +110,5 @@ Find the best Graphical User Interfaces to interact with your data and, manage a
  </div>
  
  <div class="col">
-</div>
-
+ </div>
 </div>
