rename redis cloud nav to enterprise

--- a/docs/create/cloud/index-cloud.mdx
+++ b/docs/create/cloud/index-cloud.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-cloud
 title: Using Redis Enterprise Cloud
-sidebar_label: Redis Cloud
+sidebar_label: Redis Enterprise Cloud
 slug: /create/cloud
 ---
 
